tests/ui/asm/naked-functions-inline.stderr
error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/naked-functions-inline.rs:13:1
   |
LL | #[naked]
   | -------- function marked with `#[naked]` here
LL | #[inline]
   | ^^^^^^^^^ the `inline` attribute is incompatible with `#[naked]`

error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/naked-functions-inline.rs:20:1
   |
LL | #[naked]
   | -------- function marked with `#[naked]` here
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[naked]`

error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/naked-functions-inline.rs:27:1
   |
LL | #[naked]
   | -------- function marked with `#[naked]` here
LL | #[inline(never)]
   | ^^^^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[naked]`

error[E0736]: attribute incompatible with `#[naked]`
  --> $DIR/naked-functions-inline.rs:34:19
   |
LL | #[naked]
   | -------- function marked with `#[naked]` here
LL | #[cfg_attr(all(), inline(never))]
   |                   ^^^^^^^^^^^^^ the `inline` attribute is incompatible with `#[naked]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0736`.
